--- a/.config/i3/config
+++ b/.config/i3/config
@@ -289,14 +289,14 @@ bindsym $mod+Shift+p exec ~/.config/i3/scripts/power-profiles
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1:"
 set $ws2 "2:"
-set $ws3 "3:"
-set $ws4 "4:"
-set $ws5 "5:"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5:󰠮"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "10"
+set $ws10 ""
 
 # use workspaces on different displays:
 # where you have to replace VGA-0/HDMI-0 with the names for your displays
@@ -310,16 +310,12 @@ set $ws10 "10"
 # bind program to workspace and focus to them on startup:
 assign [class="Terminator"] $ws1
 assign [class="(?i)firefox"] $ws2
-assign [class="Thunar"] $ws3
-assign [class="thunderbird"] $ws4
-assign [class="TelegramDesktop"] $ws5
+assign [class="obsidian"] $ws5
+assign [class="Spotify"] $ws10
 
 # automatic set focus new window if it opens on another workspace than the current:
-for_window [class=Terminator] focus
-for_window [class=(?i)firefox] focus
-for_window [class=Thunar] focus
-for_window [class=Thunderbird] focus
-for_window [class=TelegramDesktop] focus
+#for_window [class=Terminator] focus
+#for_window [class=(?i)firefox] focus
 
 ##############
 # compositor #
@@ -418,7 +414,8 @@ exec --no-startup-id dunst
 # Autostart apps as you like
 exec --no-startup-id sleep 2 && terminator
 exec --no-startup-id sleep 7 && firefox
-#exec --no-startup-id sleep 3 && thunar
+exec --no-startup-id sleep 7 && obsidian
+exec --no-startup-id sleep 7 && spotify-launcher
 
 ###############
 # system tray #
