--- a/.config/i3/config
+++ b/.config/i3/config
@@ -171,7 +171,7 @@ bindcode $mod+Shift+90 	 move container to workspace  $ws10
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec terminator
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+q kill
@@ -308,13 +308,13 @@ set $ws10 ""
 #workspace $ws5 output HDMI-0
 
 # bind program to workspace and focus to them on startup:
-assign [class="Terminator"] $ws1
+assign [class="Alacritty"] $ws1
 assign [class="(?i)firefox"] $ws2
 assign [class="obsidian"] $ws5
 assign [class="Spotify"] $ws10
 
 # automatic set focus new window if it opens on another workspace than the current:
-#for_window [class=Terminator] focus
+#for_window [class=Alacritty] focus
 #for_window [class=(?i)firefox] focus
 
 ##############
@@ -412,10 +412,10 @@ exec --no-startup-id dunst
 #exec_always --no-startup-id autotiling
 
 # Autostart apps as you like
-exec --no-startup-id sleep 2 && terminator
-exec --no-startup-id sleep 7 && firefox
+exec --no-startup-id sleep 2 && alacritty 
+exec --no-startup-id sleep 10 && firefox
 exec --no-startup-id sleep 7 && obsidian
-exec --no-startup-id sleep 7 && spotify-launcher
+exec --no-startup-id sleep 10 && spotify-launcher
 
 ###############
 # system tray #
