--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = https://github.com/AstroNvim/AstroNvim
+[submodule "/home/jole/.config/alacritty/catppuccin"]
+	path = /home/jole/.config/alacritty/catppuccin
+	url = https://github.com/catppuccin/alacritty.git
