--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,10 +27,40 @@ smart_borders no_gaps
 #                              Window borders                         #
 #######################################################################
 
-# class                 border      background  text        indicator   child border
-client.focused          #96CDFB     #96CDFB     #96CDFB     #96CDFB     #96CDFB
-client.focused_inactive #055494     #055494     #055494     #055494     #055494
-client.unfocused        #055494     #055494     #055494     #055494     #055494
+# Set colors
+set $rosewater #f5e0dc
+set $flamingo  #f2cdcd
+set $pink      #f5c2e7
+set $mauve     #cba6f7
+set $red       #f38ba8
+set $maroon    #eba0ac
+set $peach     #fab387
+set $green     #a6e3a1
+set $teal      #94e2d5
+set $sky       #89dceb
+set $sapphire  #74c7ec
+set $blue      #89b4fa
+set $lavender  #b4befe
+set $text      #cdd6f4
+set $subtext1  #bac2de
+set $subtext0  #a6adc8
+set $overlay2  #9399b2
+set $overlay1  #7f849c
+set $overlay0  #6c7086
+set $surface2  #585b70
+set $surface1  #45475a
+set $surface0  #313244
+set $base      #1e1e2e
+set $mantle    #181825
+set $crust     #11111b
+
+# target                 title     bg    text   indicator  border
+client.focused           $pink     $base $text  $rosewater $pink
+client.focused_inactive  $mauve    $base $text  $rosewater $mauve
+client.unfocused         $mauve    $base $text  $rosewater $mauve
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
 
 # Disable window titlebars
 for_window [class="^.*"] border pixel 1# Window borders
@@ -270,10 +300,11 @@ bar {
     workspace_buttons yes
     font pango:JetBrains Mono Nerd Font 10
     colors {
-        background #302D41
-        separator #D9E0EE
-        focused_workspace #302D41 #302D41 #D9E0EE
-        active_workspace #1E1E2E #1E1E2E #808080
+        background $base 
+        separator $surface1
+        #                 border background text
+        focused_workspace $pink  $base      $text
+        active_workspace  $mauve $base      $text
     }
 }
 
