--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -1,10 +1,10 @@
-icons_format = "{icon}"
-
+# icons_format = "{icon}"
+#
 [theme]
-theme = "solarized-dark"
-[theme.overrides]
-idle_bg = "#123456"
-idle_fg = "#abcdef"
+theme = "catppuccin-mocha"
+# [theme.overrides]
+# idle_bg = "#123456"
+# idle_fg = "#abcdef"
 
 [icons]
 icons = "awesome4"
@@ -13,7 +13,9 @@ bat = ["|E|", "|_|", "|=|", "|F|"]
 bat_charging = "|^| "
 
 [[block]]
-block = "cpu"
+block = "pomodoro"
+notify_cmd = "notify-send '{msg}'"
+blocking_cmd = false
 
 [[block]]
 block = "disk_space"
@@ -26,9 +28,8 @@ alert = 10.0
 format = " $icon root: $available.eng(w:2) "
 
 [[block]]
-block = "memory"
-format = " $icon $mem_total_used_percents.eng(w:2) "
-format_alt = " $icon_swap $swap_used_percents.eng(w:2) "
+block = "backlight"
+missing_format = ""
 
 [[block]]
 block = "sound"
@@ -37,7 +38,11 @@ button = "left"
 cmd = "pavucontrol"
 
 [[block]]
+block = "battery"
+missing_format = ""
+
+[[block]]
 block = "time"
-interval = 5
-format = " $timestamp.datetime(f:'%a %d %b %H:%M:%S') "
+interval = 1
+format = " $timestamp.datetime(f:'%A %d.%B.%Y %H:%M:%S') "
 
