--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -29,6 +29,10 @@ block = "battery"
 missing_format = ""
 
 [[block]]
+block = "custom"
+command = "powerprofilesctl get"
+
+[[block]]
 block = "time"
 interval = 1
 format = " $timestamp.datetime(f:'%A %d.%B.%Y %H:%M:%S') "
