--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-font-name=Noto Sans 10
-gtk-theme-name=Catppuccin-Mocha-Standard-Pink-Dark
+gtk-theme-name=Arc-dark
 gtk-icon-theme-name=Qogir-dark
 gtk-cursor-theme-name=Qogir-dark
 gtk-cursor-theme-size=16
