--- a/.config/i3/config
+++ b/.config/i3/config
@@ -159,7 +159,15 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
 assign [instance="^obsidian$"] → $ws3
+assign [class="^Protonvpn$"] → $ws9
 assign [class="^Spotify$"] → $ws10
+
+# Assign workspaces to monitors
+workspace $ws1 output DP-2
+workspace $ws2 output DP-0
+workspace $ws3 output DP-2
+workspace $ws9 output DP-2
+workspace $ws10 output DP-2
 
 #######################################################################
 #                               Autostart                             #
@@ -188,8 +196,9 @@ exec --no-startup-id dunst
 
 # Autostart apps as you like
 exec --no-startup-id sleep 1 && alacritty 
+exec --no-startup-id sleep 1 && protonvpn
 exec --no-startup-id sleep 3 && firefox
-exec --no-startup-id sleep 1 && obsidian
+exec --no-startup-id sleep 3 && obsidian
 exec --no-startup-id sleep 3 && spotify-launcher
 
 # Start blueberry app for managing bluetooth devices from tray
