--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,8 +9,6 @@ set -g @plugin 'dreamsofcode-io/tmux'
 # yanking
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.tmux/plugins/tpm/tpm'
-
 # Set true color
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
@@ -36,3 +34,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Initialize tmux plugin manager
+run '~/.tmux/plugins/tpm/tpm'
+
