--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".config/tmux/plugins/tpm"]
-	path = .config/tmux/plugins/tpm
+[submodule "/home/jole/.tmux/plugins/tpm"]
+	path = /home/jole/.tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
