--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # seamless tmux and vim navigation
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # color theme
-set -g @plugin 'dreamsofcode-io/tmux'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 # yanking
 set -g @plugin 'tmux-plugins/tmux-yank'
 
