--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,8 +193,9 @@ exec --no-startup-id dunst
 # Autostart apps as you like
 exec --no-startup-id sleep 1 && alacritty 
 exec --no-startup-id sleep 1 && obsidian
-exec --no-startup-id sleep 7 && firefox
-exec --no-startup-id sleep 7 && spotify-launcher
+exec --no-startup-id sleep 3 && firefox
+exec --no-startup-id sleep 3 && spotify-launcher
+exec --no-startup-id sleep 3 && redshift-gtk
 
 # Start blueberry app for managing bluetooth devices from tray
 exec --no-startup-id blueberry-tray
