--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,9 +32,14 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Open panes in current directory
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
+
+# Key binding for reloading tmux config
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
 
 # Initialize tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
-
