Rust analyzer in nvim and tmux mouse mode

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -22,6 +22,9 @@ set-option -g renumber-windows on
 # Set vi-mode
 set-window-option -g mode-keys vi
 
+# Enable mouse
+set -g mouse on
+
 # Shift Alt vim keys to swwitch windows
 bind -n M-H previous-window
 bind -n M-L next-window
