--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,6 +35,10 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Open panes in current directory
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
+# Window splits keybindings and open splits in current working directory
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
