SSH config and tmux config

--- a/.ssh/config
+++ b/.ssh/config
@@ -14,7 +14,8 @@ Host pi
 # 5G-FORAN
 Host ansible-master
     User foran
-    HostName ansible.foran.lab
+    HostName 10.0.0.60
+    # HostName ansible.foran.lab
 Host foran-dashboard
     User foran
     HostName dashboard.foran.lab
