--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,8 +10,8 @@ set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Set true color
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Start windows and panes at 1 instead of ß
 set -g base-index 1
