--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,6 +3,6 @@
 <fontconfig>
   <alias>
     <family>monospace</family>
-    <prefer><family>JetBrainsMono Nerd Font</family></prefer>
+    <prefer><family>JetBrainsMono NF</family></prefer>
   </alias>
 </fontconfig>
