--- a/.config/i3/config
+++ b/.config/i3/config
@@ -158,15 +158,18 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 # Open applications in certain workspaces
 assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
-assign [instance="^obsidian$"] → $ws3
+assign [class="^obsidian$"] → $ws3
+assign [class="^Zathura$"] → $ws4
+assign [class="^Zotero$"] → $ws5
 assign [class="^Spotify$"] → $ws10
 
 # Assign workspaces to monitors
 workspace $ws1 output DP-2
 workspace $ws2 output DP-0
 workspace $ws3 output DP-2
-workspace $ws9 output DP-2
-workspace $ws10 output DP-2
+workspace $ws4 output DP-2
+workspace $ws5 output DP-2
+workspace $ws10 output DP-0
 
 #######################################################################
 #                               Autostart                             #
