--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x10\x45\0\0\x1\xe5\0\0\x12\xbd\0\0\x3\xf7\0\0\x10\x46\0\0\x1\xe6\0\0\x12\xbc\0\0\x3\xf6\0\0\0\0\0\0\0\0\n\0\0\0\x10\x46\0\0\x1\xe6\0\0\x12\xbc\0\0\x3\xf6)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\xf\0\0\0\0\x1b\0\0\x13\xff\0\0\x5\x9f\0\0\xf\x1\0\0\0\x1c\0\0\x13\xfe\0\0\x5\x9e\0\0\0\0\0\0\0\0\n\0\0\0\xf\x1\0\0\0\x1c\0\0\x13\xfe\0\0\x5\x9e)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xc0\0\0\0\x18\0\0\a\x7f\0\0\x4\x37\0\0\x3\xc1\0\0\0\x19\0\0\a~\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xc1\0\0\0\x19\0\0\a~\0\0\x4\x36)
 
 [Troubleshooting]
 force_raster_widgets=1
