--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 # yanking
 set -g @plugin 'tmux-plugins/tmux-yank'
+# tmuxifier
+set -g @plugin 'jimeh/tmuxifier'
 
 # Set true color
 set -g default-terminal 'tmux-256color'
