--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,15 +5,15 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # seamless tmux and vim navigation
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # color theme
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
 # yanking
 set -g @plugin 'tmux-plugins/tmux-yank'
 # tmuxifier
 set -g @plugin 'jimeh/tmuxifier'
 
 # Set true color
-set -g default-terminal 'tmux-256color'
-set -as terminal-overrides ",alacritty*:Tc"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Start windows and panes at 1 instead of ß
 set -g base-index 1
