--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,7 @@
 import = ["/home/jole/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
 
 [env]
+TERM = "xterm-256color"
 WINIT_X11_SCALE_FACTOR = "1"
 
 [font]
