--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,21 +31,33 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork --color 1E1E2E
+set $lock i3lock --nofork --no-unlock-indicator --image=$HOME/.local/share/wallpapers/catppuccin.png
+exec --no-startup-id xss-lock --transfer-sleep-lock -- $lock
+bindsym $mod+o exec $lock
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q sset Master 3%+
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 3%-
-bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
-bindsym XF86AudioMicMute exec --no-startup-id amixer set Capture toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Backlight control
 bindsym XF86MonBrightnessUp exec xbacklight +10
 bindsym XF86MonBrightnessDown exec xbacklight -10
+
+# Screenshots
+bindsym Print exec --no-startup-id maim "/$HOME/Downloads/$(date +'%Y_%m_%dT%H_%M_%S_%4N').png"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/$HOME/Downloads/$(date +'%Y_%m_%dT%H_%M_%S_%4N').png"
+bindsym Shift+Print exec --no-startup-id maim --select "/$HOME/Downloads/$(date +'%Y_%m_%dT%H_%M_%S_%4N').png"
+
+## Clipboard Screenshots
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -63,7 +75,7 @@ bindsym $mod+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym $mod+d exec "rofi -modi drun,p:rofi-power-menu -show drun"
+bindsym $mod+d exec "rofi -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -153,11 +165,8 @@ assign [class="^obsidian$"] → $ws3
 assign [class="^Spotify$"] → $ws10
 
 # autostart
-exec_always --no-startup-id picom
 exec --no-startup-id dunst
 exec --no-startup-id redshift-gtk
-
-exec --no-startup-id nextcloud
 exec --no-startup-id alacritty
 exec --no-startup-id obsidian
 exec --no-startup-id firefox
@@ -190,9 +199,58 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+# https://github.com/catppuccin/i3
+set $rosewater #f5e0dc
+set $flamingo  #f2cdcd
+set $pink      #f5c2e7
+set $mauve     #cba6f7
+set $red       #f38ba8
+set $maroon    #eba0ac
+set $peach     #fab387
+set $yellow    #f9e2af
+set $green     #a6e3a1
+set $teal      #94e2d5
+set $sky       #89dceb
+set $sapphire  #74c7ec
+set $blue      #89b4fa
+set $lavender  #b4befe
+set $text      #cdd6f4
+set $subtext1  #bac2de
+set $subtext0  #a6adc8
+set $overlay2  #9399b2
+set $overlay1  #7f849c
+set $overlay0  #6c7086
+set $surface2  #585b70
+set $surface1  #45475a
+set $surface0  #313244
+set $base      #1e1e2e
+set $mantle    #181825
+set $crust     #11111b
+
+# Window colors
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
     status_command i3status-rs ~/.config/i3status-rust/config.toml
     position top
+    colors {
+        background         $base
+        statusline         $text
+        focused_statusline $text
+        active_workspace   $base $text $blue
+        focused_separator  $base
+        focused_workspace  $base $base $green
+        active_workspace   $base $base $blue
+        inactive_workspace $base $base $surface1
+        urgent_workspace   $base $base $surface1
+        binding_mode       $base $base $surface1
+    }
 }
