Improve i3lock config and make lock screen wallpaper fit

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,7 +31,8 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-set $lock dunstctl set-paused true && i3lock --nofork --no-unlock-indicator --image=$HOME/.local/share/wallpapers/catppuccin.png && dunstctl set-paused false
+exec --no-startup-id $HOME/.config/i3/scripts/setup_auto_screen_off.sh
+set $lock $HOME/.config/i3/scripts/lock.sh
 exec --no-startup-id xss-lock --transfer-sleep-lock -- $lock
 bindsym $mod+o exec $lock
 
