--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -51,4 +51,4 @@ unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 # Initialize tmux plugin manager
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
