Add shortcut to thunar in i3

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -157,6 +157,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # bindings to programs
+bindsym $mod+e exec thunar
 bindsym $mod+w exec firefox
 
 # open specific applications in specific workspaces
