--- a/.config/i3/config
+++ b/.config/i3/config
@@ -242,13 +242,13 @@ set $mantle    #181825
 set $crust     #11111b
 
 # Window colors
-# target                 title     bg    text   indicator  border
-client.focused           $lavender $base $text  $rosewater $lavender
-client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
-client.unfocused         $overlay0 $base $text  $rosewater $overlay0
-client.urgent            $peach    $base $peach $overlay0  $peach
-client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
-client.background        $base
+# class                     border      background  text        indicator       child_border
+client.focused              $lavender   $base       $text       $lavender       $lavender
+client.focused_inactive     $overlay0   $base       $text       $overlay0       $overlay0
+client.unfocused            $overlay0   $base       $text       $overlay0       $overlay0
+client.urgent               $peach      $base       $peach      $peach          $peach
+client.placeholder          $overlay0   $base       $text       $overlay0       $overlay0
+client.background           $base
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
