Add catppuccin theme for lazygit

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".config/tmux/plugins/tpm"]
 	path = .config/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule ".local/share/catppuccin-lazygit"]
+	path = .local/share/catppuccin-lazygit
+	url = https://github.com/catppuccin/lazygit.git
