--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -11,6 +11,9 @@ missing_format = ""
 [[block]]
 block = "sound"
 max_vol = 100
+[[block.click]]
+button = "left"
+cmd = "pavucontrol"
 
 [[block]]
 block = "battery"
