--- a/.config/i3/config
+++ b/.config/i3/config
@@ -260,10 +260,9 @@ bar {
         background         $base
         statusline         $text
         focused_statusline $text
-        active_workspace   $base $text $blue
+        active_workspace   $base $text $lavender
         focused_separator  $base
-        focused_workspace  $base $base $green
-        active_workspace   $base $base $blue
+        focused_workspace  $base $base $text
         inactive_workspace $base $base $surface1
         urgent_workspace   $base $base $surface1
         binding_mode       $base $base $surface1
