--- a/.config/i3/config
+++ b/.config/i3/config
@@ -163,6 +163,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 # bindings to programs
 bindsym $mod+e exec thunar
 bindsym $mod+w exec firefox
+bindsym $mod+Shift+p exec pkill -USR1 '^redshift$'
 
 # open specific applications in specific workspaces
 assign [class="^Alacritty$"] → $ws1
