Specify full path to padel script in respective unit file

--- a/.config/systemd/user/padel.service
+++ b/.config/systemd/user/padel.service
@@ -3,7 +3,7 @@ Description=Check for Padel court bookings
 
 [Service]
 Type=oneshot
-ExecStart=padel
+ExecStart=/home/jole/.local/bin/padel
 
 [Install]
 WantedBy=multi-user.target
