--- a/.config/i3/config
+++ b/.config/i3/config
@@ -190,7 +190,7 @@ exec --no-startup-id dunst
 exec --no-startup-id redshift-gtk
 exec --no-startup-id alacritty
 exec --no-startup-id obsidian
-exec --no-startup-id firefox
+exec --no-startup-id sleep 3 && firefox
 exec --no-startup-id spotify-launcher
 
 # reload the configuration file
