--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,14 +56,20 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-# Screenshots
+# Screenshots that are saved to the filesystem
+## Fullscreen
 bindsym Print exec --no-startup-id maim "/$HOME/Downloads/$(date +'%Y_%m_%dT%H_%M_%S_%4N').png"
+## Active window
 bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/$HOME/Downloads/$(date +'%Y_%m_%dT%H_%M_%S_%4N').png"
+## Select area
 bindsym Shift+Print exec --no-startup-id maim --select "/$HOME/Downloads/$(date +'%Y_%m_%dT%H_%M_%S_%4N').png"
 
-## Clipboard Screenshots
+# Screenshots that are saved to the clipboard
+## Fullscreen
 bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+## Active window
 bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+## Select area
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 # Use Mouse+$mod to drag floating windows to their wanted position
