Improve tmux-sessionizer

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,5 +50,8 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+# tmux-sessionizer
+bind-key -r f run-shell "tmux new-window tmux-sessionizer"
+
 # Initialize tmux plugin manager
 run '~/.config/tmux/plugins/tpm/tpm'
