Add Zotero to startup applications

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -181,6 +181,8 @@ bindsym $mod+Shift+p exec pkill -USR1 '^redshift$'
 assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
 assign [class="^obsidian$"] → $ws3
+assign [class="^Zathura$"] → $ws4
+assign [class="^Zotero$"] → $ws5
 assign [class="^Spotify$"] → $ws10
 
 # assign workspaces to specific screens
@@ -194,9 +196,11 @@ workspace $ws10 output DP-0
 # autostart
 exec --no-startup-id dunst
 exec --no-startup-id redshift-gtk
+
 exec --no-startup-id alacritty
-exec --no-startup-id obsidian
 exec --no-startup-id sleep 3 && firefox
+exec --no-startup-id obsidian
+exec --no-startup-id zotero
 exec --no-startup-id spotify-launcher
 
 # reload the configuration file
