--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,12 +1,11 @@
 # tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-
 # sensible tmux defaults
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
+# seamless tmux and vim navigation
+set -g @plugin 'christoomey/vim-tmux-navigator'
 # color theme
 set -g @plugin 'catppuccin/tmux'
-
 # yanking
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -22,6 +21,9 @@ set-option -g renumber-windows on
 
 # Set vi-mode
 set-window-option -g mode-keys vi
+
+# Enable mouse
+set -g mouse on
 
 # Shift Alt vim keys to swwitch windows
 bind -n M-H previous-window
