--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,147 +1,2 @@
-shadow = false
-fading = false;
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
-# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.95;
-
-# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
-
-# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
-
-# Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
-
-#################################
-#           Corners             #
-#################################
-
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-corner-radius = 0
-
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
-
-# Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
-# `xrender` is the default one.
-#
-backend = "glx"
-# backend = "xrender";
-
-# Use higher precision during rendering, and apply dither when presenting the
-# rendered screen. Reduces banding artifacts, but might cause performance
-# degradation. Only works with OpenGL.
-dithered-present = false;
-
-# Enable/disable VSync.
-# vsync = false
+backend = "glx";
 vsync = true;
-
-# Try to detect WM windows (a non-override-redirect window with no
-# child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
-mark-wmwin-focused = true;
-
-# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
-
-# Try to detect windows with rounded corners and don't consider them
-# shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
-detect-rounded-corners = true;
-
-# Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
-#
-# detect-client-opacity = false
-detect-client-opacity = true;
-
-# Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
-# in the same group focused at the same time.
-#
-# detect-transient = false
-detect-transient = true;
-
-# GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
-# Might cause incorrect opacity when rendering transparent content (but never
-# practically happened) and may not work with blur-background.
-# My tests show a 15% performance boost. Recommended.
-#
-glx-no-stencil = true;
-
-# Disable the use of damage information.
-# This cause the whole screen to be redrawn every time, instead of the part of the screen
-# has actually changed. Potentially degrades the performance, but might fix some artifacts.
-# The opposing option is use-damage
-#
-# no-use-damage = false
-use-damage = true;
-
-# Set the log level. Possible values are:
-#  "trace", "debug", "info", "warn", "error"
-# in increasing level of importance. Case doesn't matter.
-# If using the "TRACE" log level, it's better to log into a file
-# using *--log-file*, since it can generate a huge stream of logs.
-#
-# log-level = "debug"
-log-level = "warn";
-
-# Window type settings
-#
-# 'WINDOW_TYPE' is one of the 15 window types defined in EWMH standard:
-#     "unknown", "desktop", "dock", "toolbar", "menu", "utility",
-#     "splash", "dialog", "normal", "dropdown_menu", "popup_menu",
-#     "tooltip", "notification", "combo", and "dnd".
-#
-# Following per window-type options are available: ::
-#
-#   fade, shadow:::
-#     Controls window-type-specific shadow and fade settings.
-#
-#   opacity:::
-#     Controls default opacity of the window type.
-#
-#   focus:::
-#     Controls whether the window of this type is to be always considered focused.
-#     (By default, all window types except "normal" and "dialog" has this on.)
-#
-#   full-shadow:::
-#     Controls whether shadow is drawn under the parts of the window that you
-#     normally won't be able to see. Useful when the window has parts of it
-#     transparent, and you want shadows in those areas.
-#
-#   clip-shadow-above:::
-#     Controls whether shadows that would have been drawn above the window should
-#     be clipped. Useful for dock windows that should have no shadow painted on top.
-#
-#   redir-ignore:::
-#     Controls whether this type of windows should cause screen to become
-#     redirected again after been unredirected. If you have unredir-if-possible
-#     set, and doesn't want certain window to cause unnecessary screen redirection,
-#     you can set this to `true`.
-#
-wintypes:
-{
-  tooltip = { fade = false; shadow = false; opacity = 1; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1; }
-  dropdown_menu = { opacity = 1; }
-};
