--- a/.config/i3/config
+++ b/.config/i3/config
@@ -181,15 +181,24 @@ bindsym $mod+Shift+p exec pkill -USR1 '^redshift$'
 assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
 assign [class="^obsidian$"] → $ws3
-assign [class="^Zotero$"] → $ws5
-assign [class="^Spotify$"] → $ws10
+assign [class="^Zotero$"] → $ws3
+assign [class="^signal$"] → $ws5
+assign [class="^discord$"] → $ws6
+assign [class="^steam$"] → $ws7
+assign [class="^steam_app_.*$"] → $ws9
+assign [class="^spotify$"] → $ws10
 
 # assign workspaces to specific screens
+# right
 workspace $ws1 output DP-2
 workspace $ws3 output DP-2
 workspace $ws4 output DP-2
-workspace $ws5 output DP-2
+workspace $ws7 output DP-2
+workspace $ws9 output DP-2
+# left
 workspace $ws2 output DP-0
+workspace $ws5 output DP-0
+workspace $ws6 output DP-0
 workspace $ws10 output DP-0
 
 # autostart
