--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name = Catppuccin-Mocha-Standard-Lavender-Dark
-gtk-icon-theme-name = Papirus
-gtk-cursor-theme-name = Catppuccin-Mocha-Lavender-Cursors
+gtk-theme-name = catppuccin-mocha-lavender-standard+default
+gtk-icon-theme-name = Papirus-Dark
+gtk-cursor-theme-name = catppuccin-mocha-lavender-cursors
 gtk-application-prefer-dark-theme = true
