--- a/.config/i3/config
+++ b/.config/i3/config
@@ -182,7 +182,7 @@ assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
 assign [class="^obsidian$"] → $ws3
 assign [class="^Zotero$"] → $ws4
-assign [class="^signal$"] → $ws5
+assign [class="^Signal$"] → $ws5
 assign [class="^discord$"] → $ws6
 assign [class="^steam$"] → $ws7
 assign [class="^steam_app_.*$"] → $ws9
